# fill-in-the-middle

./: .env.example  .gitignore  CLAUDE.md  COLAB.md  README.md  pyproject.toml  requirements.txt
archive/: fill-in-the-middle-fine-tune.py
scripts/: infer.py  setup_colab.py  test.py  train.py
src/fim/: __init__.py  config.py  data.py  inference.py  logger.py  model.py  training.py
tests/: conftest.py  test_config.py  test_data.py  test_inference.py  test_model.py  test_training.py
