[project]
name = "fim-finetuning"
version = "0.1.0"
description = "Fill-in-the-middle code completion fine-tuning with Qwen3-8B"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.8.0",
    "transformers==4.56.2",
    "datasets>=2.14.0",
    "unsloth @ git+https://github.com/unslothai/unsloth",
    "trl==0.22.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
